--- a/tablet-view.css
+++ b/tablet-view.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Bellefair&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Bellefair&display=swap');
 
 * {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -22,13 +22,13 @@ body {
     color: white;
 }
 
-.container {
+body .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-family: 'Barlow Condensed', sans-serif;
-    margin-top: 5vh;
-    margin-left: 3vw;
+    margin-top: 3vh;
+    margin-left: 5vw;
 }
 
 .logo img {
@@ -61,56 +61,13 @@ body {
     display: none;
 }
 
-/* header {
-    margin-top: 2.5rem;
-    margin-left: 4rem;
-    margin-right: 5rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-family: 'Barlow Condensed', sans-serif;
-}
-
-header .logo img {
-    width: 5rem;
-    height: 5rem;
-}
-
-.line {
-    display: none;
-}
-
-nav .row {
-    box-sizing: border-box;
-    display: grid;
-    grid-template-columns: 10rem 10rem 10rem 10rem; 
-}
-
-nav .col {
-    display: flex;
-    justify-content: center;
-}
-
-nav .col a {
-    padding: 2rem 0;
-    color: white;
-    font-size: 1.8em;
-    letter-spacing: 0.2em;
-    font-weight: 100;
-}
-
-nav .col span {
-    display: none;
-}
-*/
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
-    text-align: center;
-    margin-top: 10rem;
-} 
+    justify-items: center;
+    height: 80vh ;
+}
 
 main .left .p1 {
     font-size: 2em;
@@ -158,4 +115,4 @@ main .right .p4 {
 
 nav a:focus {
     border-bottom: 2px solid white;
-}
+} */
