--- a/desktop-view.css
+++ b/desktop-view.css
@@ -3,11 +3,7 @@
 * {
     margin: 0;
     padding: 0;
-}
-
-a {
-    text-transform: uppercase;
-    text-decoration: none;
+    box-sizing: border-box;
 }
 
 html {
@@ -15,7 +11,7 @@ html {
 }
 
 body {
-    background-image: url('images/Home/background-home-desktop.jpg');
+    background: url('images/Home/background-home-desktop.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -59,19 +55,27 @@ body .container {
 .row {
     box-sizing: border-box;
     display: grid;
-    grid-template-columns: 10vw 10vw 10vw 10vw ;
-    padding: 4vh 0;
+    grid-template-columns: 1fr 1fr 1fr 1fr ;
+    padding: 4vh 4vh 4vh 0;
     text-align: center;
 }
 
+a {
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
 .col a {
-    font-size: 1.6em;
+    font-size: 1.8rem;
     text-decoration: none;
     color: white;
     letter-spacing: 0.27vw;
     font-weight: 400;
     padding-bottom: 3.6vh;
-
+    text-transform: uppercase;
+    justify-self: start;
+    justify-content: start;
+    justify-items: start;
 }
 
 .col span {
@@ -79,23 +83,29 @@ body .container {
     padding: 4vh 0.8vw 4vh 0;
 }
 
-main {
+/* Main */
+
+.home-wrapper, .destination-wrapper {
+    position: absolute;
+}
+
+/* home */
+
+.home {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-items: center;
     height: 80vh ;
+    overflow: hidden;
+    z-index: 1;
 }
 
-.left {
+.home .left {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
     gap: 2.4rem;
-    width: 44.5rem;
-    height: 38.2rem;
-    margin-inline: auto;
+    padding-left: 15rem;
 }
 
 .p1 {
@@ -117,7 +127,7 @@ main {
     line-height: 32px;
 }
 
-main .right {
+.home .right {
     border-radius: 50%;
     background-color: white;
     width: 19.03vw;
@@ -127,13 +137,111 @@ main .right {
     align-items: center;
 }
 
-main .right .p4 {
+.home .right .p4 {
     color: black;
     font-size: 3.2em;
     letter-spacing: 0.3em;
     font-family: 'bellefair', sans-serif;
+    z-index: 1;
 }
 
 nav a:focus {
     border-bottom: 2px solid white;
 } 
+
+/* destination */
+
+.destination-wrapper {
+    align-self: center;
+    margin-inline: auto;
+}
+
+.destination {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+    height: 80vh ;
+    font-family: 'Barlow', sans-serif;
+    text-transform: uppercase;
+    opacity: 0;
+    z-index: 0;
+}
+
+.destination .left p {
+    letter-spacing: 2px;
+    word-spacing: 2px;
+    font-size: 2.2rem;
+    font-weight: 400;
+}
+
+.destination .left span {
+    margin-right: 2rem;
+    font-weight: 100;
+}
+
+.destination .left img {
+    margin: 2rem;
+    padding: 3rem;
+    height: 40rem;
+    width: 40rem;
+}
+
+.destination .right {
+    display: flex;
+    flex-direction: column;
+}
+
+.destination .right .navRight {
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    max-width: 350px;
+}
+
+.destination .right .navRight a {
+    font-weight: 100;
+    letter-spacing: 2px;
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: white;
+    text-decoration: none;
+}
+
+.navRight a:focus {
+    border-bottom: 1px solid white;
+}
+
+.destination .right h1 {
+    font-size: 10rem;
+    font-family: 'bellefair', sans-serif;
+    font-weight: 100;
+    padding: 2rem 0;
+}
+
+.description {
+    font-size: 1.5rem;
+    font-weight: 100;
+    text-transform: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    line-height: 25px;
+    padding-bottom: 4rem;
+    margin-right: 10rem;
+}
+
+.right-bottom {
+    padding-top: 3rem;
+    display: flex;
+    gap: 5rem;
+    font-weight: 100;
+}
+
+.right-bottom-1 p:last-child,
+.right-bottom-2 p:last-child {
+  font-size: 2rem;
+  font-family: 'bellefair', sans-serif;
+  padding-top: 1rem;
+}
+
+  
+  
